--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 aside{
     border: #eeeeee solid 1px;
-    width: 20%;
+    width:20%;
 }
 
 .search {
@@ -35,14 +35,14 @@ font-style: bold;
 .contact  {
 padding: 20px;
 gap: 10px;
-
 }
 
 .contact:hover {
+box-sizing: border-box;
 background-color: #ededed;
-border-radius: 10px;
-margin-bottom: 10px;
+border-radius: 5px;
 cursor: pointer;
+margin: 10px;
 }
 
 .contact img {
@@ -195,3 +195,14 @@ cursor:pointer;
 scale: 130%;
 }
 
+@media (max-width:480px)  {
+
+.chat {
+    display: none;
+}
+    aside {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+}
